# CLibML

./: .gitignore  CMakeLists.txt  README.md  debug.lldb
cmake/: MLFrameworkConfig.cmake.in  mlframework.pc.in
examples/: CMakeLists.txt
examples/mnist/: CMakeLists.txt
examples/mnist/src/: mnist_main.c
examples/snake/: CMakeLists.txt
examples/snake/src/: README.md  snake_ai.c  snake_ai.h  snake_game.h  snake_main.c
include/: base_defs.h  cost.h  err.h  img.h  layers.h  network.h  optimizers.h  os.h  str.h  tensorNew.h
src/: base.h  err.c  main.c  str.c
src/autograd/: autograd.c  autograd.h
src/cost/: cost.c
src/examples/snake/: README.md  snake_ai.c  snake_ai.h  snake_game.c  snake_game.h  snake_main.c
src/image/: img.c
src/layers/: layers.c  layers_activation.c  layers_conv_2d.c  layers_dense.c  layers_dropout.c  layers_flatten.c  layers_input.c  layers_internal.h  layers_norm.c  layers_null.c  layers_pooling_2d.c  layers_reshape.c
src/memory_mngmnt/: arena.c  arena.h
src/mg/: mg_arena.h  mg_impl.c
src/model/: modelVariables.c  modelVariables.h
src/model/program/: modelProgram.c  modelProgram.h
src/model/train/: train.c  train.h
src/model/variables/: modelVariables.c  modelVariables.h
src/network/: network.c
src/optimizers/: optimizers.c
src/os/: os_mac.c
src/random_generators/: prng.c  prng.h
src/tensor/: tensor.c  tensor.h  tensorNew.c  tensorNew_impl.c  tensor_backend_cpu.c  tensor_internal.h
src/utils/: data_loader.c  desc_loader.c
tests/: mnist.tsd  model_epoch_0001.tsn
